[workspace]
members = ["planetary"]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
authors = ["The Rust WDL project developers"]
homepage = "https://github.com/stjude-rust-labs/planetary"
repository = "https://github.com/stjude-rust-labs/planetary"
rust-version = "1.80.0"

[workspace.dependencies]
axum = { version = "0.7.6", features = ["macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.18", features = ["derive"] }
clap-verbosity-flag = "2.2.1"
eyre = "0.6.12"
k8s-openapi = { version = "0.23.0", features = ["v1_26"] }
kube = "0.95.0"
ordered-float = "4.2.2"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
tes = { git = "https://github.com/stjude-rust-labs/tes.git", branch = "main", features = [
    "ord",
    "serde",
] }
tokio = { version = "1.40.0", features = ["full", "time"] }
tower = { version = "0.5.1", features = ["full"] }
tower-http = { version = "0.6.0", features = ["full"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
twox-hash = "1.6.3"
url = { version = "2.5.2", features = ["serde"] }

[workspace.lints.rust]
missing_docs = "warn"
nonstandard-style = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"
rust-2024-compatibility = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"

[workspace.lints.clippy]
missing_docs_in_private_items = "warn"
