[workspace]
members = ["planetary"]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
authors = ["The Rust WDL project developers"]
homepage = "https://github.com/stjude-rust-labs/planetary"
repository = "https://github.com/stjude-rust-labs/planetary"
rust-version = "1.82.0"

[workspace.dependencies]
axum = { version = "0.8.4", features = ["macros"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.37", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
eyre = "0.6.12"
k8s-openapi = { version = "0.24.0", features = ["v1_32"] }
kube = "0.99.0"
ordered-float = "5.0.0"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
tes = { version = "0.6.0", features = ["serde"] }
tokio = { version = "1.45.0", features = ["full", "time"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
twox-hash = "2.1.0"
url = { version = "2.5.4", features = ["serde"] }

[workspace.lints.rust]
missing_docs = "warn"
nonstandard-style = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"
rust-2024-compatibility = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"

[workspace.lints.clippy]
missing_docs_in_private_items = "warn"
