[workspace]
members = ["planetary", "planetary-db", "planetary-transporter"]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
authors = ["The Rust WDL project developers"]
homepage = "https://github.com/stjude-rust-labs/planetary"
repository = "https://github.com/stjude-rust-labs/planetary"
rust-version = "1.85.1"

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["query"] }
bon = "3.6.4"
cfg-if = "1.0.1"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive", "env"] }
clap-verbosity-flag = "3.0.3"
diesel = { version = "2.2.10", features = ["postgres", "pq-src", "chrono"] }
diesel-async = { version = "0.5.2", features = ["postgres", "deadpool"] }
diesel-derive-enum = { version = "3.0.0-beta.1", features = ["postgres"] }
diesel_migrations = "2.2.0"
futures = "0.3.31"
glob = "0.3.2"
k8s-openapi = { version = "0.25.0", features = ["v1_32"] }
kube = { version = "1.1.0", features = ["runtime"] }
ordered-float = "5.0.0"
rand = "0.9.1"
reqwest = { version = "0.12.20", features = ["stream"] }
secrecy = "0.10.3"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
shlex = "1.3.0"
tes = { version = "0.8.0", features = ["serde"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full", "time"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.15"
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
twox-hash = "2.1.1"
url = { version = "2.5.4", features = ["serde"] }
walkdir = "2.5.0"

[workspace.lints.rust]
missing_docs = "warn"
nonstandard-style = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"
rust-2024-compatibility = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"

[workspace.lints.clippy]
missing_docs_in_private_items = "warn"
