[package]
name = "cloud"
version = "0.1.0"
description = "A library for transferring files to and from cloud storage."
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true, optional = true }
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
clap = { workspace = true, optional = true }
clap-verbosity-flag = { workspace = true, optional = true }
colored = { workspace = true, optional = true }
crc64fast-nvme.workspace = true
futures.workspace = true
opool.workspace = true
pin-project-lite.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde-xml-rs.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-retry2.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-indicatif.workspace = true
tracing-subscriber = { workspace = true, optional = true }
url.workspace = true
walkdir.workspace = true

[lints]
workspace = true

[features]
default = []
cli = ["dep:clap", "dep:anyhow", "dep:clap-verbosity-flag", "dep:colored", "dep:tracing-subscriber"]

[[bin]]
name = "cloud"
required-features = ["cli"]
