[package]
name = "planetary-transporter"
description = "The task input and output transporter used by Planetary."
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
cloud = { version = "0.1.0", path = "../cloud" }
planetary-db = { version = "0.1.0", path = "../planetary-db" }
anyhow.workspace = true
cfg-if.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
futures.workspace = true
glob.workspace = true
reqwest.workspace = true
secrecy.workspace = true
tes.workspace = true
tokio.workspace = true
tracing-indicatif.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
walkdir.workspace = true

[features]
default = ["postgres"]
postgres = ["planetary-db/postgres"]

[lints]
workspace = true

[[bin]]
name = "transporter"
path = "src/main.rs"
