[package]
name = "planetary-server"
version = "0.1.0"
description = "The shared Planetary server implementation"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
planetary-db = { version = "0.1.0", path = "../db" }
anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
bon.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true

[lints]
workspace = true

[features]
default = ["postgres"]
postgres = ["planetary-db/postgres"]
