[package]
name = "planetary-transporter"
description = "The task input and output transporter used by Planetary."
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
cloud = { version = "0.1.0", path = "../cloud", features = ["cli"] }
planetary-db = { version = "0.1.0", path = "../db" }
anyhow.workspace = true
cfg-if.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
colored.workspace = true
futures.workspace = true
glob.workspace = true
reqwest.workspace = true
secrecy.workspace = true
tes.workspace = true
tokio.workspace = true
tokio-retry2.workspace = true
tracing-indicatif.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
walkdir.workspace = true

[lints]
workspace = true

[[bin]]
name = "planetary-transporter"
path = "src/main.rs"
