[package]
name = "planetary-transporter"
description = "The task input and output transporter used by Planetary."
version = "0.0.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "planetary-transporter"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
byte-unit.workspace = true
cfg-if.workspace = true
chrono.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
cloud-copy.workspace = true
colored.workspace = true
futures.workspace = true
glob.workspace = true
planetary-db = { version = "0.0.0", path = "../db" }
reqwest.workspace = true
reqwest-middleware.workspace = true
secrecy.workspace = true
tes.workspace = true
tokio.workspace = true
tokio-retry2.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-indicatif.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
walkdir.workspace = true

[lints]
workspace = true
